@startuml Forum Database ERD

' Styling
!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) <i>x</i>

' Users table
table(users) {
    primary_key(id): INTEGER
    nickname: TEXT
    email: TEXT
    password: TEXT
    first_name: TEXT
    last_name: TEXT
    age: INTEGER
    gender: TEXT
    created_at: TIMESTAMP
    last_login: TIMESTAMP
    is_online: BOOLEAN
}

' Posts table
table(posts) {
    primary_key(id): INTEGER
    foreign_key(user_id): INTEGER
    title: TEXT
    content: TEXT
    image_url: TEXT
    video_url: TEXT
    giphy_id: TEXT
    giphy_url: TEXT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
    likes: INTEGER
    dislikes: INTEGER
}

' Categories table
table(categories) {
    primary_key(id): INTEGER
    name: TEXT
    description: TEXT
}

' Comments table
table(comments) {
    primary_key(id): INTEGER
    foreign_key(post_id): INTEGER
    foreign_key(user_id): INTEGER
    content: TEXT
    created_at: TIMESTAMP
}

' Post Categories junction table
table(post_categories) {
    foreign_key(post_id): INTEGER
    foreign_key(category_id): INTEGER
}

' Post Reactions table
table(post_reactions) {
    foreign_key(user_id): INTEGER
    foreign_key(post_id): INTEGER
    is_like: BOOLEAN
    created_at: TIMESTAMP
}

' Comment Reactions table
table(comment_reactions) {
    foreign_key(user_id): INTEGER
    foreign_key(comment_id): INTEGER
    is_like: BOOLEAN
    created_at: TIMESTAMP
}

' Messages table
table(messages) {
    primary_key(id): INTEGER
    foreign_key(sender_id): INTEGER
    foreign_key(receiver_id): INTEGER
    content: TEXT
    is_read: BOOLEAN
    created_at: TIMESTAMP
}

' Sessions table
table(sessions) {
    primary_key(id): TEXT
    foreign_key(user_id): INTEGER
    created_at: TIMESTAMP
    expires_at: TIMESTAMP
}

' Relationships
users "1" -- "*" posts : creates
users "1" -- "*" comments : writes
posts "1" -- "*" comments : has
posts "*" -- "*" categories : through post_categories
users "1" -- "*" post_reactions : reacts to posts
users "1" -- "*" comment_reactions : reacts to comments
posts "1" -- "*" post_reactions : receives reactions
comments "1" -- "*" comment_reactions : receives reactions
users "1" -- "*" messages : sends
users "1" -- "*" messages : receives
users "1" -- "*" sessions : has

@enduml 